fix minor css on mobile

--- a/client/src/components/CryptoModal.css
+++ b/client/src/components/CryptoModal.css
@@ -7,7 +7,7 @@
   position: absolute;
   bottom: 0;
   width: 100vw;
-  height: 10vh;
+  height: 12vh;
   padding: 20px 0;
   background: radial-gradient(
     circle,
