--- a/client/src/components/CryptoTable.css
+++ b/client/src/components/CryptoTable.css
@@ -79,6 +79,10 @@ th {
   cursor: pointer;
 }
 
+th:last-child {
+  padding-right: 25px;
+}
+
 #actions-tab {
   cursor: default;
 }
@@ -107,9 +111,8 @@ td:not(:last-child) {
   #table-header {
     width: 90vw;
   }
-
-  #table-scroll-container {
-    max-height: 70vh;
+  td button {
+    padding: 3px;
   }
 }
 
@@ -117,8 +120,5 @@ td:not(:last-child) {
   #table-scroll-container,
   #table-header {
     width: 90vw;
-  }
-  #table-scroll-container {
-    max-height: 65vh;
   }
 }
